objects/metazoa3__snapshot_note__c.object
<CustomObject>
    <description>This is an administrative object for Snapshot Org Management. This object records user notes and other information about Metadata assets.</description>
    <fields>
        <fullName>metazoa3__asset_information__c</fullName>
        <label>Asset Information</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>metazoa3__asset_name__c</fullName>
        <label>Asset Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>metazoa3__extra_field_one__c</fullName>
        <label>Extra Field One</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>metazoa3__extra_field_two__c</fullName>
        <label>Extra Field Two</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>metazoa3__extra_flag_one__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Extra Flag One</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>metazoa3__extra_flag_two__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Extra Flag Two</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>metazoa3__more_information__c</fullName>
        <label>More Information</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>metazoa3__object_type__c</fullName>
        <label>Object Type</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Snapshot Note</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Snapshot Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>